---
config:
  look: handDrawn
  layout: elk
---
erDiagram
    USER ||--o{ AUTHTOKEN : "has (userId)"
    USER ||--o{ ORDER : "processes (userId)"
    CUSTOMER ||--o{ ORDER : "places (customerId)"
    CATEGORY ||--o{ PRODUCT : "contains (categoryId)"
    SUPPLIER ||--o{ PRODUCT : "supplies (supplierId)"
    PRODUCT ||--o{ INVENTORYLOG : "tracked_in (productId)"
    PRODUCT ||--o{ ORDERITEM : "included_in (productId)"
    ORDER ||--|| RECEIPT : "generates (orderId)"
    ORDER ||--o{ PAYMENT : "settles (orderId)"
    ORDER ||--o{ ORDERITEM : "contains (items_array)"

    USER {
        ObjectId id PK
        string name
        string email
        string password
        string phone
        string role
        boolean isActive
        datetime lastLogin
        boolean isBlocked
    }

    AUTHTOKEN {
        ObjectId userId FK
        string token
        datetime expiresAt
    }

    CATEGORY {
        ObjectId id PK
        string name
        string image
        boolean isActive
    }

    CUSTOMER {
        ObjectId id PK
        string name
        string phone
        string email
        int loyaltyPoints
        float totalSpent
    }

    PRODUCT {
        ObjectId id PK
        string name
        string sku
        string barcode
        ObjectId categoryId FK
        float costPrice
        float sellingPrice
        int stock
        string unit
        ObjectId supplierId FK
    }

    ORDER {
        ObjectId id PK
        string orderNumber
        ObjectId userId FK
        ObjectId customerId FK
        float grandTotal
        string paymentStatus
        string orderStatus
        string paymentMethod
    }

    ORDERITEM {
        ObjectId productId FK
        string name
        string sku
        int quantity
        float price
        float total
    }

    PAYMENT {
        ObjectId id PK
        ObjectId orderId FK
        float amount
        string transactionId
        string status
    }

    RECEIPT {
        ObjectId id PK
        ObjectId orderId FK
        string receiptNumber
        boolean printed
    }

    SUPPLIER {
        ObjectId id PK
        string name
        string companyName
        string phone
        string email
        string gstNumber
    }

    INVENTORYLOG {
        ObjectId id PK
        ObjectId productId FK
        string type
        int quantity
        string reason
        ObjectId referenceId
    }